tests/react_16_9/react_16_9.exp
Error ------------------------------------------------------------------------------------------------- profiler.js:5:26

Cannot get `React.ProfilerOnRenderFnType` because property `ProfilerOnRenderFnType` is missing in module `react` [1].
[prop-missing]

   profiler.js:5:26
     5| const onRenderBad: React.ProfilerOnRenderFnType = ( // Error, the type isnt exported
                                 ^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:172:16
   172| declare module react {
                       ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ profiler.js:17:13

Cannot create `React.Profiler` element because properties `id` and `onRender` are missing in props [1] but exist in
props of component [2]. [incompatible-type]

   profiler.js:17:13
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                    ^^^^^^^^^^^^^^

References:
   profiler.js:17:12
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                   ^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:758:38
                                             v
   758|     declare const Profiler: component(
   759|       children?: React$Node,
   760|       id: string,
   761|       onRender: ProfilerOnRenderFnType,
   762|     );
            ^ [2]



Found 2 errors
